--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="title">De에너지</div>
-        <div class="sub">by CTQ from Seil</div>
+      <div class="backdrop">
+        <div class="container">
+          <div class="title">De에너지</div>
+          <div class="sub">by CTQ from Seil</div>
+        </div>
       </div>
     </header>
     <div class="content">
@@ -56,22 +58,6 @@
         </div>
         <div class="check">
           <div class="lable">에너지 절약 상태 — Good</div>
-          <!-- <div class="container">
-          <div class="circle">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="#FFF"
-              viewbox="0 0 16 16"
-            >
-              <path
-                d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"
-              />
-            </svg>
-          </div>
-          <div class="text">좋음</div>
-        </div> -->
         </div>
       </section>
       <section class="graph">
