Add device section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,49 @@
       </section>
       <section class="devices">
         <div class="header">기기</div>
+        <div class="container">
+          <div class="card active">
+            <div class="name">전등</div>
+            <div class="status">켜짐</div>
+
+            <div class="icon">
+              <img src="./assets/images/lamp.png" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="name">TV</div>
+            <div class="status">꺼짐</div>
+            <div class="icon">
+              <img src="./assets/images/tv.png" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="name">에어컨</div>
+            <div class="status">꺼짐</div>
+
+            <div class="icon">
+              <img src="./assets/images/air-conditioner.png" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="name">선풍기</div>
+            <div class="status">꺼짐</div>
+
+            <div class="icon">
+              <img src="./assets/images/fan.png" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="name">충전기</div>
+            <div class="status">꺼짐</div>
+
+            <div class="icon">
+              <img src="./assets/images/charger.png" alt="" />
+            </div>
+          </div>
+        </div>
       </section>
+      <section class="more">asd</section>
     </div>
     <script>
       //그래프 값(예시)
