--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
             <div class="status">켜짐</div>
 
             <div class="icon">
-              <img src="./assets/images/lamp.png" alt="" />
+              <img src="./assets/images/lamp.png" alt="Lamp" />
             </div>
           </div>
           <div class="card">
             <div class="name">TV</div>
             <div class="status">꺼짐</div>
             <div class="icon">
-              <img src="./assets/images/tv.png" alt="" />
+              <img src="./assets/images/tv.png" alt="Television" />
             </div>
           </div>
           <div class="card">
@@ -103,7 +103,10 @@
             <div class="status">꺼짐</div>
 
             <div class="icon">
-              <img src="./assets/images/air-conditioner.png" alt="" />
+              <img
+                src="./assets/images/air-conditioner.png"
+                alt="Air conditioner"
+              />
             </div>
           </div>
           <div class="card">
@@ -111,7 +114,7 @@
             <div class="status">꺼짐</div>
 
             <div class="icon">
-              <img src="./assets/images/fan.png" alt="" />
+              <img src="./assets/images/fan.png" alt="Electric fan" />
             </div>
           </div>
           <div class="card">
@@ -119,13 +122,31 @@
             <div class="status">꺼짐</div>
 
             <div class="icon">
-              <img src="./assets/images/charger.png" alt="" />
+              <img src="./assets/images/charger.png" alt="Charger" />
             </div>
           </div>
         </div>
       </section>
-      <section class="more">asd</section>
+      <section class="more">
+        <div class="container">
+          <div class="box">
+            <div class="sub">더 알아보기</div>
+            <div class="title">이 앱의 스토리를 알고 싶으신가요?</div>
+            <div class="button-box">
+              <a href="/promotion" class="button">보러 가기</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+    <footer>
+      <div class="container">
+        <div class="copyright">© CTQ from Seil.</div>
+        <div class="github">
+          <a href="https://github.com/amclio/energy-refactor">Sources</a>
+        </div>
+      </div>
+    </footer>
     <script>
       //그래프 값(예시)
       // var L1x = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
